remove user nexus

--- a/oss/Dockerfile
+++ b/oss/Dockerfile
@@ -51,13 +51,13 @@ RUN mkdir -p /opt/sonatype/nexus \
   && mv /tmp/nexus-${NEXUS_VERSION}/* /opt/sonatype/nexus/ \
   && rm -rf /tmp/nexus-${NEXUS_VERSION}
 
-RUN useradd -r -u 200 -m -c "nexus role account" -d ${SONATYPE_WORK} -s /bin/false nexus
+#RUN useradd -r -u 200 -m -c "nexus role account" -d ${SONATYPE_WORK} -s /bin/false nexus
 
 VOLUME ${SONATYPE_WORK}
 
 EXPOSE 8081
 WORKDIR /opt/sonatype/nexus
-USER nexus
+#USER nexus
 ENV CONTEXT_PATH /nexus
 ENV MAX_HEAP 768m
 ENV MIN_HEAP 256m
